--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
             <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
             <rect width="1280" height="900" fill="url(#wood-pattern)" mask="url(#blow-mask)"></rect>
             <g id="js-meets-circles">
-              <circle fill="white" stroke="none" r="60" transform="translate(774,242)" data-x="774" data-y="242"></circle>
-              <circle fill="white" stroke="none" r="87" transform="translate(647,247)" data-x="647" data-y="247"></circle>
-              <circle fill="white" stroke="none" r="66" transform="translate(737,267)" data-x="737" data-y="267"></circle>
-              <circle fill="white" stroke="none" r="75" transform="translate(547,253)" data-x="547" data-y="253"></circle>
-              <circle fill="white" stroke="none" r="89" transform="translate(680,208)" data-x="680" data-y="208"></circle>
-              <circle fill="white" stroke="none" r="97" transform="translate(526,287)" data-x="526" data-y="287"></circle>
-              <circle fill="white" stroke="none" r="73" transform="translate(572,203)" data-x="572" data-y="203"></circle>
-              <circle fill="white" stroke="none" r="81" transform="translate(622,263)" data-x="622" data-y="263"></circle>
-              <circle fill="white" stroke="none" r="74" transform="translate(608,282)" data-x="608" data-y="282"></circle>
-              <circle fill="white" stroke="none" r="57" transform="translate(661,231)" data-x="661" data-y="231"></circle>
-              <circle fill="white" stroke="none" r="69" transform="translate(751,233)" data-x="751" data-y="233"></circle>
-              <circle fill="white" stroke="none" r="60" transform="translate(776,236)" data-x="776" data-y="236"></circle>
+              <circle fill="white" stroke="none" r="87" transform="translate(605,238)" data-x="605" data-y="238"></circle>
+              <circle fill="white" stroke="none" r="97" transform="translate(606,236)" data-x="606" data-y="236"></circle>
+              <circle fill="white" stroke="none" r="69" transform="translate(775,255)" data-x="775" data-y="255"></circle>
+              <circle fill="white" stroke="none" r="63" transform="translate(591,251)" data-x="591" data-y="251"></circle>
+              <circle fill="white" stroke="none" r="87" transform="translate(605,246)" data-x="605" data-y="246"></circle>
+              <circle fill="white" stroke="none" r="58" transform="translate(600,239)" data-x="600" data-y="239"></circle>
+              <circle fill="white" stroke="none" r="60" transform="translate(736,239)" data-x="736" data-y="239"></circle>
+              <circle fill="white" stroke="none" r="92" transform="translate(654,269)" data-x="654" data-y="269"></circle>
+              <circle fill="white" stroke="none" r="87" transform="translate(525,227)" data-x="525" data-y="227"></circle>
+              <circle fill="white" stroke="none" r="73" transform="translate(540,292)" data-x="540" data-y="292"></circle>
+              <circle fill="white" stroke="none" r="64" transform="translate(760,208)" data-x="760" data-y="208"></circle>
+              <circle fill="white" stroke="none" r="80" transform="translate(744,280)" data-x="744" data-y="280"></circle>
             </g>
             <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -200,7 +200,7 @@
                   <rect id="fist-mask" transform="translate(100,42.5)" fill="#FBF7E8" width="40" height="39"></rect>
                 </g>
               </g>
-              <rect width="1280" height="900" mask="url(#right-shirt)" fill="url(#blue-flowers-pattern)"></rect>
+              <rect width="1280" height="900" mask="url(#right-shirt)" fill="url(#blue-flowers-pattern)" class="js-shirt-wall h-g"></rect>
               <g id="gradient-group" transform="translate(600,300)">
                 <rect id="white-rect" fill="#FFFFFF" x="440" y="-100" width="300" height="300"></rect>
                 <rect id="gradient" fill="url(#linearGradient-1)" x="264" y="-100" width="177" height="300"></rect>
@@ -224,7 +224,7 @@
                   <rect id="js-left-shirt" x="-500" rx="5" fill="white" x2="183" y="280" width="282" height="97" class="js-shirt"></rect>
                 </mask>
               </g>
-              <rect width="1280" height="900" mask="url(#left-shirt)" fill="url(#rose-pattern)"></rect>
+              <rect width="1280" height="900" mask="url(#left-shirt)" fill="url(#rose-pattern)" class="js-shirt-wall h-g"></rect>
               <g id="gradient-group-left" transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)">
                 <rect id="white-gradient" fill="url(#linearGradient-1)" x="264" y="-100" width="177" height="300"></rect>
                 <rect id="white-rect" fill="#FFFFFF" x="441" y="-100" width="300" height="300"></rect>
@@ -331,26 +331,26 @@
           </g>
           <g id="js-svg" class="h-g">
             <g id="js-svg-circles" class="h-g">
-              <circle fill="white" stroke="" r="0" transform="translate(795,371)" data-x="795" data-y="371"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(504,152)" data-x="504" data-y="152"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(418,181)" data-x="418" data-y="181"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(723,444)" data-x="723" data-y="444"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(554,722)" data-x="554" data-y="722"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(784,676)" data-x="784" data-y="676"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(762,789)" data-x="762" data-y="789"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(462,383)" data-x="462" data-y="383"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(965,790)" data-x="965" data-y="790"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(731,274)" data-x="731" data-y="274"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(537,764)" data-x="537" data-y="764"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(359,540)" data-x="359" data-y="540"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(444,552)" data-x="444" data-y="552"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(661,482)" data-x="661" data-y="482"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(676,488)" data-x="676" data-y="488"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(688,225)" data-x="688" data-y="225"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(342,511)" data-x="342" data-y="511"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(688,208)" data-x="688" data-y="208"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(860,219)" data-x="860" data-y="219"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(612,336)" data-x="612" data-y="336"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(430,471)" data-x="430" data-y="471"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(957,99)" data-x="957" data-y="99"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(758,64)" data-x="758" data-y="64"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(405,336)" data-x="405" data-y="336"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(776,162)" data-x="776" data-y="162"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(488,687)" data-x="488" data-y="687"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(931,587)" data-x="931" data-y="587"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(1016,355)" data-x="1016" data-y="355"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(617,774)" data-x="617" data-y="774"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(934,256)" data-x="934" data-y="256"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(263,834)" data-x="263" data-y="834"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(548,542)" data-x="548" data-y="542"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(782,595)" data-x="782" data-y="595"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(252,129)" data-x="252" data-y="129"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(708,207)" data-x="708" data-y="207"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(898,171)" data-x="898" data-y="171"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(1016,164)" data-x="1016" data-y="164"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(695,599)" data-x="695" data-y="599"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(338,367)" data-x="338" data-y="367"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(523,243)" data-x="523" data-y="243"></circle>
             </g>
             <mask id="svg-s-mask">
               <g transform="translate(250,0)">
@@ -394,31 +394,31 @@
             </g>
             <rect fill="url(#cheese-pattern)" mask="url(#svg-v-mask)" width="1280" height="900"></rect>
             <g id="js-svg-blow" transform="translate(625,435)" class="h-g">
-              <rect fill="#00C4FF" width="23" height="21"></rect>
-              <rect fill="#9013FE" width="11" height="21"></rect>
-              <rect fill="#FA1C46" width="12" height="17"></rect>
-              <rect fill="#00C4FF" width="26" height="20"></rect>
-              <rect fill="#9013FE" width="30" height="24"></rect>
-              <rect fill="#FA1C46" width="14" height="26"></rect>
-              <rect fill="#00C4FF" width="29" height="22"></rect>
-              <rect fill="#9013FE" width="20" height="17"></rect>
-              <rect fill="#FA1C46" width="28" height="23"></rect>
-              <rect fill="#00C4FF" width="13" height="12"></rect>
-              <rect fill="#9013FE" width="23" height="23"></rect>
-              <rect fill="#FA1C46" width="10" height="10"></rect>
-              <rect fill="#00C4FF" width="28" height="26"></rect>
-              <rect fill="#9013FE" width="28" height="16"></rect>
-              <rect fill="#FA1C46" width="29" height="25"></rect>
-              <rect fill="#00C4FF" width="26" height="17"></rect>
-              <rect fill="#9013FE" width="29" height="30"></rect>
-              <rect fill="#FA1C46" width="11" height="13"></rect>
-              <rect fill="#00C4FF" width="24" height="28"></rect>
-              <rect fill="#9013FE" width="16" height="18"></rect>
-              <rect fill="#FA1C46" width="18" height="25"></rect>
-              <rect fill="#00C4FF" width="13" height="13"></rect>
-              <rect fill="#9013FE" width="30" height="24"></rect>
-              <rect fill="#FA1C46" width="30" height="24"></rect>
-              <rect fill="#00C4FF" width="23" height="12"></rect>
+              <rect fill="#00C4FF" width="18" height="30"></rect>
+              <rect fill="#9013FE" width="23" height="14"></rect>
+              <rect fill="#FA1C46" width="23" height="19"></rect>
+              <rect fill="#00C4FF" width="22" height="28"></rect>
+              <rect fill="#9013FE" width="28" height="11"></rect>
+              <rect fill="#FA1C46" width="18" height="13"></rect>
+              <rect fill="#00C4FF" width="23" height="20"></rect>
+              <rect fill="#9013FE" width="14" height="16"></rect>
+              <rect fill="#FA1C46" width="10" height="25"></rect>
+              <rect fill="#00C4FF" width="11" height="28"></rect>
+              <rect fill="#9013FE" width="22" height="11"></rect>
+              <rect fill="#FA1C46" width="13" height="30"></rect>
+              <rect fill="#00C4FF" width="15" height="30"></rect>
+              <rect fill="#9013FE" width="21" height="26"></rect>
+              <rect fill="#FA1C46" width="29" height="30"></rect>
+              <rect fill="#00C4FF" width="21" height="10"></rect>
+              <rect fill="#9013FE" width="13" height="16"></rect>
+              <rect fill="#FA1C46" width="30" height="12"></rect>
+              <rect fill="#00C4FF" width="11" height="18"></rect>
+              <rect fill="#9013FE" width="28" height="19"></rect>
+              <rect fill="#FA1C46" width="14" height="10"></rect>
+              <rect fill="#00C4FF" width="15" height="20"></rect>
+              <rect fill="#9013FE" width="24" height="28"></rect>
+              <rect fill="#FA1C46" width="18" height="22"></rect>
+              <rect fill="#00C4FF" width="18" height="23"></rect>
             </g>
           </g>
           <g id="js-triangles" class="h-g">
