--- a/index.html
+++ b/index.html
@@ -1485,6 +1485,7 @@
         </svg>
       </div>
     </div>
+    <!-- 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
     <script src="js/helpers.js"></script>
@@ -1498,6 +1499,7 @@
     <script src="js/fish.js"></script>
     <script src="js/mushroom.js"></script>
     <script src="js/tribits.js"></script>
-    <script src="js/main.js"></script>
+     -->
+    <script src="js/main.min.js"></script>
   </body>
 </html>
